--- a/contact.html
+++ b/contact.html
@@ -3,63 +3,172 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Contact Us</title>
-<meta name="description" content="Get in touch with us via the contact form or our contact details.">
+<title>Contact Cloud Image Hosting</title>
+<meta name="description" content="Get in touch with us about our cloud image hosting platform, billing, or technical support.">
 <style>
 /* Base reset */
 *, *::before, *::after { box-sizing: border-box; }
 html, body { margin: 0; padding: 0; }
-body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif; color: #0f172a; background: #f8fafc; }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+
+body {
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  color: #e5e7eb;
+  background:
+    radial-gradient(circle at top left, rgba(56,189,248,0.35), transparent 55%),
+    radial-gradient(circle at bottom right, rgba(129,140,248,0.38), transparent 55%),
+    #020617;
+  min-height: 100vh;
+}
+
+.site-header {
+  position: sticky;
+  top: 0;
+  z-index: 50;
+  backdrop-filter: blur(18px);
+  background: linear-gradient(to right, rgba(15, 23, 42, 0.96), rgba(15, 23, 42, 0.9));
+  border-bottom: 1px solid rgba(148, 163, 184, 0.3);
+}
+
+.site-header-inner {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 14px 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.site-logo {
+  font-weight: 800;
+  font-size: 1.05rem;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #e5e7eb;
+  text-decoration: none;
+}
+
+.site-logo span {
+  color: #38bdf8;
+}
+
+.site-nav {
+  display: flex;
+  gap: 8px;
+}
+
+.site-nav a {
+  padding: 8px 14px;
+  border-radius: 999px;
+  font-size: 0.88rem;
+  font-weight: 500;
+  color: #cbd5f5;
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+
+.site-nav a:hover {
+  background: rgba(148, 163, 184, 0.18);
+  color: #ffffff;
+}
+
+.site-nav a[aria-current="page"] {
+  background: linear-gradient(135deg, #38bdf8, #6366f1);
+  color: #0b1120;
+  box-shadow: 0 8px 22px rgba(99, 102, 241, 0.4);
+}
 
 /* Layout */
-.container { max-width: 960px; margin: 0 auto; padding: 24px; }
-header { display: flex; align-items: center; justify-content: space-between; padding: 16px 0; }
-nav a { color: #0f172a; text-decoration: none; margin-left: 16px; font-weight: 600; }
-nav a:hover, nav a:focus { text-decoration: underline; }
+.container { max-width: 960px; margin: 0 auto; padding: 32px 24px 40px; }
 
 /* Card */
-.card { background: #ffffff; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px; box-shadow: 0 1px 2px rgba(16,24,40,0.04); }
+.card {
+  background: radial-gradient(circle at top left, rgba(148,163,184,0.2), transparent 55%), rgba(15,23,42,0.96);
+  border-radius: 20px;
+  padding: 26px 24px;
+  box-shadow: 0 20px 60px rgba(15,23,42,0.85);
+  border: 1px solid rgba(148, 163, 184, 0.4);
+}
 .grid { display: grid; grid-template-columns: 1fr; gap: 24px; }
-@media (min-width: 900px) { .grid { grid-template-columns: 1fr 1fr; } }
+@media (min-width: 900px) { .grid { grid-template-columns: 1.35fr 1fr; } }
 
 /* Typography */
-h1 { margin: 0 0 8px; font-size: 32px; line-height: 1.2; }
-p.lead { margin: 0 0 24px; color: #475569; font-size: 16px; }
+h1 { margin: 0 0 8px; font-size: 30px; line-height: 1.2; color: #f9fafb; }
+p.lead { margin: 0 0 24px; color: #cbd5f5; font-size: 15px; }
 
 /* Form */
 form { display: grid; gap: 16px; }
-label { display: block; font-weight: 600; margin-bottom: 6px; }
-input[type="text"], input[type="email"], textarea { width: 100%; border: 1px solid #cbd5e1; border-radius: 8px; padding: 12px 14px; font-size: 16px; background: #ffffff; color: #0f172a; }
-input[type="text"]:focus, input[type="email"]:focus, textarea:focus { outline: 3px solid #bfdbfe; border-color: #60a5fa; }
+label { display: block; font-weight: 600; margin-bottom: 6px; color: #e5e7eb; font-size: 0.9rem; }
+input[type="text"], input[type="email"], textarea {
+  width: 100%;
+  border-radius: 12px;
+  padding: 11px 14px;
+  font-size: 15px;
+  background: #020617;
+  color: #e5e7eb;
+  border: 1px solid rgba(148,163,184,0.55);
+  transition: all 0.2s ease;
+}
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
+  outline: none;
+  border-color: #38bdf8;
+  box-shadow: 0 0 0 1px #38bdf8, 0 0 0 8px rgba(56,189,248,0.15);
+}
 textarea { min-height: 140px; resize: vertical; }
 
-.actions { display: flex; align-items: center; gap: 12px; }
-button[type="submit"] { appearance: none; border: none; background: #2563eb; color: #ffffff; padding: 12px 18px; border-radius: 8px; font-weight: 700; cursor: pointer; }
-button[type="submit"]:hover { background: #1d4ed8; }
-button[type="submit"]:focus { outline: 3px solid #bfdbfe; }
+.actions { display: flex; align-items: center; gap: 12px; flex-wrap: wrap; }
+button[type="submit"] {
+  appearance: none;
+  border: none;
+  background: linear-gradient(135deg, #38bdf8, #6366f1);
+  color: #ffffff;
+  padding: 11px 20px;
+  border-radius: 999px;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 0.95rem;
+  box-shadow: 0 14px 32px rgba(59,130,246,0.8);
+  transition: transform 0.15s ease, box-shadow 0.15s ease, filter 0.15s ease;
+}
+button[type="submit"]:hover {
+  transform: translateY(-2px);
+  filter: brightness(1.05);
+  box-shadow: 0 18px 40px rgba(59,130,246,0.95);
+}
+button[type="submit"]:focus {
+  outline: none;
+  box-shadow: 0 0 0 1px #38bdf8, 0 0 0 8px rgba(56,189,248,0.2);
+}
 
-.muted { color: #64748b; font-size: 14px; }
+.muted { color: #9ca3af; font-size: 13px; }
 .contact-list { list-style: none; padding: 0; margin: 0; display: grid; gap: 12px; }
-.contact-item { display: flex; align-items: center; gap: 10px; }
-.contact-item svg { width: 18px; height: 18px; color: #334155; }
+.contact-item { display: flex; align-items: center; gap: 10px; color: #e5e7eb; font-size: 0.93rem; }
+.contact-item a { color: inherit; text-decoration: none; }
+.contact-item a:hover { text-decoration: underline; }
+.contact-item svg { width: 18px; height: 18px; color: #60a5fa; }
 
-footer { margin-top: 48px; padding: 24px 0; color: #94a3b8; font-size: 14px; }
+footer { margin-top: 32px; padding: 16px 0 0; color: #9ca3af; font-size: 13px; text-align: center; }
 </style>
 </head>
 <body>
-<div class="container">
-  <header>
-    <a href="index.html" aria-label="Back to home" style="font-weight: 800; font-size: 18px; color:#0f172a; text-decoration:none;">MySite</a>
-    <nav aria-label="Primary">
+<header class="site-header">
+  <div class="site-header-inner">
+    <a href="index.html" class="site-logo" aria-label="Back to home">Cloud<span>Image</span>Host</a>
+    <nav class="site-nav" aria-label="Primary navigation">
       <a href="index.html">Home</a>
+      <a href="index_server.html">Subscription Plans</a>
       <a href="contact.html" aria-current="page">Contact</a>
     </nav>
-  </header>
+  </div>
+</header>
+<div class="container">
 
   <main class="grid" id="main" tabindex="-1">
     <section class="card" aria-labelledby="contact-title">
-      <h1 id="contact-title">Contact Us</h1>
-      <p class="lead">Questions, feedback, or proposals? Send us a message and we’ll get back to you.</p>
+      <h1 id="contact-title">Contact Cloud Image Hosting</h1>
+      <p class="lead">Questions about storing or delivering your images in the cloud? Send us a message and we’ll get back to you.</p>
 
       <form id="contact-form" method="post" action="#" novalidate>
         <div>
@@ -90,7 +199,7 @@ footer { margin-top: 48px; padding: 24px 0; color: #94a3b8; font-size: 14px; }
       <ul class="contact-list">
         <li class="contact-item">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15A2.25 2.25 0 012.25 17.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.5a2.25 2.25 0 01-2.32 0l-7.5-4.5A2.25 2.25 0 012.25 6.993V6.75"/></svg>
-          <a href="mailto:hello@example.com">hello@example.com</a>
+          <a href="mailto:support@cloudimagehosting.com">support@cloudimagehosting.com</a>
         </li>
         <li class="contact-item">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372a1.125 1.125 0 00-.852-1.09l-4.423-1.106a1.125 1.125 0 00-1.173.417l-.97 1.293a1.125 1.125 0 01-1.21.41 12.035 12.035 0 01-7.143-7.143 1.125 1.125 0 01.41-1.21l1.293-.97a1.125 1.125 0 00.417-1.173L6.962 3.102A1.125 1.125 0 005.872 2.25H4.5A2.25 2.25 0 002.25 4.5v2.25z"/></svg>
@@ -105,7 +214,7 @@ footer { margin-top: 48px; padding: 24px 0; color: #94a3b8; font-size: 14px; }
   </main>
 
   <footer>
-    © <span id="year"></span> MySite. All rights reserved.
+    © <span id="year"></span> Cloud Image Hosting. All rights reserved.
   </footer>
 </div>
 
