--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
         <section class="plans-container">
             <div class="plan-card">
                 <div class="plan-tag">For personal projects</div>
-                <div class="plan-duration">Starter (Yearly)</div>
-                <div class="plan-price">₦32,400<span>/year</span></div>
-                <p class="plan-note">Yearly billing; cancel at next renewal.</p>
+                <div class="plan-duration">Starter (One-time Payment)</div>
+                <div class="plan-price">₦32,400<span> one-time</span></div>
+                <p class="plan-note">One-time payment; lifetime access.</p>
                 <ul class="plan-features">
                     <li>20 GB secure image storage</li>
                     <li>Unlimited uploads within fair use</li>
@@ -249,9 +249,9 @@
             
             <div class="plan-card popular">
                 <div class="plan-tag">Best for growing teams</div>
-                <div class="plan-duration">Growth (Yearly)</div>
-                <div class="plan-price">₦231,600<span>/year</span></div>
-                <p class="plan-note">Discounted yearly billing.</p>
+                <div class="plan-duration">Growth (One-time Payment)</div>
+                <div class="plan-price">₦231,600<span> one-time</span></div>
+                <p class="plan-note">One-time payment; lifetime access.</p>
                 <ul class="plan-features">
                     <li>100 GB secure image storage</li>
                     <li>Global CDN delivery for every image</li>
@@ -265,9 +265,9 @@
             
             <div class="plan-card">
                 <div class="plan-tag">For high‑traffic apps</div>
-                <div class="plan-duration">Scale (Yearly)</div>
-                <div class="plan-price">₦408,000<span>/year</span></div>
-                <p class="plan-note">Annual commitment with the best value.</p>
+                <div class="plan-duration">Scale (One-time Payment)</div>
+                <div class="plan-price">₦408,000<span> one-time</span></div>
+                <p class="plan-note">One-time payment; lifetime access.</p>
                 <ul class="plan-features">
                     <li>500 GB+ scalable image storage</li>
                     <li>SLA‑backed global CDN performance</li>
